--- a/src/Makefile.var
+++ b/src/Makefile.var
@@ -22,6 +22,7 @@ MEXOPTS      = -O -largeArrayDims
 MEXEND       =
 MOSUF        = o # mex output object suffix
 UNAME        = uname
+IS_ARM       = uname -m | grep -q 'arm' && echo true
 AR           = ar rcs
 COPY         = cp -f
 DEL          = rm -f
@@ -48,20 +49,21 @@ endif
 
 ##### macOS #####
 ifeq (Darwin,$(PLATFORM))
-  MEXEXT     = mexmaci64
-  MEXBIN    ?= mex
-  # https://stackoverflow.com/questions/37362414/
-  OMPFLAG    = -fopenmp=libiomp5
-  SOSUF      = dylib
-  SONAME     = install_name
-endif
-ifeq (arm64,$(PLATFORM))
-  MEXEXT     = mexmaca64
-  MEXBIN    ?= mex
-  # https://stackoverflow.com/questions/37362414/
-  OMPFLAG    = -fopenmp=libiomp5
-  SOSUF      = dylib
-  SONAME     = install_name
+  ifeq ($(IS_ARM),false)
+    MEXEXT     = mexmaci64
+    MEXBIN    ?= mex
+    # https://stackoverflow.com/questions/37362414/
+    OMPFLAG    = -fopenmp=libiomp5
+    SOSUF      = dylib
+    SONAME     = install_name
+  else
+    MEXEXT     = mexmaca64
+    MEXBIN    ?= mex
+    # https://stackoverflow.com/questions/37362414/
+    OMPFLAG    = -fopenmp=libiomp5
+    SOSUF      = dylib
+    SONAME     = install_name
+  endif
 endif
 
 ##### Windows #####
