--- a/src/Makefile.var
+++ b/src/Makefile.var
@@ -49,11 +49,11 @@ endif
 
 ##### macOS #####
 ifeq (Darwin,$(PLATFORM))
-  ifeq ($(ARCH),aarch64) # Check for Apple Silicon
-    @echo "Running on ARM64 architecture ($(ARCH))"
+  ifeq (aarch64,$(ARCH)) # Check for Apple Silicon
+    @ echo "Running on Apple Silicon"
     MEXEXT     = mexmaca64
   else
-    @echo "Running on Intel architecture ($(ARCH))"
+    @ echo "Running on Intel architecture"
     MEXEXT     = mexmaci64
   endif
   MEXBIN    ?= mex
