--- a/src/Makefile
+++ b/src/Makefile
@@ -92,6 +92,8 @@ check:
 test:
 	@ $(SPMEXE) eval "spm_tests;close all force;"
 
+debug: verb.$(MEXEXT)
+
 ###############################################################################
 # Private make targets
 ###############################################################################
