--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -27,12 +27,12 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
       - name: Set up MATLAB (legacy)
-        if: ${{matrix.version == 'R2020a' || matrix.version == 'R2020b'}}
+        if: ${{matrix.version == 'R2020a' || matrix.version == 'R2020b' || matrix.version == 'R2022a' || matrix.version == 'R2022b'}}
         uses: matlab-actions/setup-matlab@v1        
         with:
           release: ${{matrix.version}}
       - name: Set up MATLAB
-        if: ${{matrix.version != 'R2020a' && matrix.version != 'R2020b'}}
+        if: ${{matrix.version != 'R2020a' && matrix.version != 'R2020b' && matrix.version != 'R2022a' && matrix.version != 'R2022b'}}
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{matrix.version}}
