--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -37,16 +37,16 @@ jobs:
         with:
           release: ${{matrix.version}}
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup cached test data folder
         id: cache-data-tests
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: tests/data
           key: tests-data
           enableCrossOsArchive: true
       - name: Check out test data to latest 
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with: 
           repository: spm/spm-tests-data
           token: ${{ secrets.TESTS_DATA_REPO_TOKEN }}
@@ -54,7 +54,7 @@ jobs:
           lfs: true
       - name: Run regression tests with existing MEX files
         if: github.event.schedule == '40 16 * * 3'
-        uses: matlab-actions/run-command@v1
+        uses: matlab-actions/run-command@v1 # R2020b fails with run-command@v2
         with:
           command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
       - name: Run unit tests with existing MEX files
@@ -77,7 +77,7 @@ jobs:
         if: runner.os == 'Windows'
         run: echo "MEXEXT=$(mexext.bat)" >> $env:GITHUB_ENV
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: spm-${{env.MEXEXT}}-${{runner.os}}-${{matrix.version}}
           path: ./**/*.${{env.MEXEXT}}
