--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a"]
-        os: ["ubuntu-latest", "macos-13", "windows-latest"]
+        os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"]
         exclude:
           - os: windows-latest
             version: "R2020a" # MATLAB not available
