--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -24,18 +24,36 @@ jobs:
             version: "R2021a" # Compiler not available
           - os: windows-latest
             version: "R2021b" # Compiler not available
+          - os: macos-latest
+            version: "R2020a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2020b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2021a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2021b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2022a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2022b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2023a" # Apple Silicon version not available
     runs-on: ${{matrix.os}}
+    env:
+      USE_OLD_MATLAB_ACTION: ${{matrix.version == 'R2020a' || matrix.version == 'R2020b' || matrix.version == 'R2022a' || matrix.version == 'R2022b'}}
     steps:
+
       - name: Set up MATLAB (legacy)
-        if: ${{matrix.version == 'R2020a' || matrix.version == 'R2020b' || matrix.version == 'R2022a' || matrix.version == 'R2022b'}}
+        if: env.USE_OLD_MATLAB_ACTION
         uses: matlab-actions/setup-matlab@v1        
         with:
           release: ${{matrix.version}}
       - name: Set up MATLAB
-        if: ${{matrix.version != 'R2020a' && matrix.version != 'R2020b' && matrix.version != 'R2022a' && matrix.version != 'R2022b'}}
+        if: !env.USE_OLD_MATLAB_ACTION
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{matrix.version}}
+
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Setup cached test data folder
@@ -52,16 +70,28 @@ jobs:
           token: ${{ secrets.TESTS_DATA_REPO_TOKEN }}
           path: tests/data
           lfs: true
+
+      - name: Run regression tests with existing MEX files (legacy)
+        if: ${{ github.event.schedule == '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION }}
+        uses: matlab-actions/run-command@v1
+        with:
+          command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
+      - name: Run unit tests with existing MEX files (legacy)
+        if: ${{ github.event.schedule != '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION }}
+        uses: matlab-actions/run-command@v1
+        with:
+          command: addpath(pwd); results = spm_tests('class','unit','display',true); assert(all(~[results.Failed]));
       - name: Run regression tests with existing MEX files
-        if: github.event.schedule == '40 16 * * 3'
-        uses: matlab-actions/run-command@v2 # R2020b fails with run-command@v2
+        if: ${{ github.event.schedule == '40 16 * * 3' && !env.USE_OLD_MATLAB_ACTION }}
+        uses: matlab-actions/run-command@v2
         with:
           command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
       - name: Run unit tests with existing MEX files
-        if: github.event.schedule != '40 16 * * 3'
+        if: ${{ github.event.schedule != '40 16 * * 3' && !env.USE_OLD_MATLAB_ACTION }}
         uses: matlab-actions/run-command@v2
         with:
           command: addpath(pwd); results = spm_tests('class','unit','display',true); assert(all(~[results.Failed]));
+
       - name: Compile MEX files
         run: |
           make -C src distclean
