--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a"]
-        os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"]
+        os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
         exclude:
           - os: windows-latest
             version: "R2020a" # MATLAB not available
@@ -49,7 +49,7 @@ jobs:
         with:
           release: ${{matrix.version}}
       - name: Set up MATLAB
-        if: !env.USE_OLD_MATLAB_ACTION
+        if: ${{ !env.USE_OLD_MATLAB_ACTION }}
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{matrix.version}}
