--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -39,17 +39,23 @@ jobs:
           - os: macos-latest
             version: "R2023a" # Apple Silicon version not available
     runs-on: ${{matrix.os}}
-    env:
-      USE_OLD_MATLAB_ACTION: ${{matrix.version == 'R2020a' || matrix.version == 'R2020b' || matrix.version == 'R2022a' || matrix.version == 'R2022b'}}
     steps:
+      - name: Set USE_OLD_MATLAB_ACTION environment variable
+        id: set-env
+        run: |
+          if [[ "${{ matrix.version }}" == "R2020a" ]] || [[ "${{ matrix.version }}" == "R2020b" ]] || [[ "${{ matrix.version }}" == "R2022a" ]] || [[ "${{ matrix.version }}" == "R2022b" ]]; then
+            echo "USE_OLD_MATLAB_ACTION=true" >> $GITHUB_ENV
+          else
+            echo "USE_OLD_MATLAB_ACTION=false" >> $GITHUB_ENV
+          fi
 
       - name: Set up MATLAB (legacy)
-        if: env.USE_OLD_MATLAB_ACTION
+        if: env.USE_OLD_MATLAB_ACTION == 'true'
         uses: matlab-actions/setup-matlab@v1        
         with:
           release: ${{matrix.version}}
       - name: Set up MATLAB
-        if: ${{ !env.USE_OLD_MATLAB_ACTION }}
+        if: env.USE_OLD_MATLAB_ACTION == 'false'
         uses: matlab-actions/setup-matlab@v2
         with:
           release: ${{matrix.version}}
@@ -72,22 +78,22 @@ jobs:
           lfs: true
 
       - name: Run regression tests with existing MEX files (legacy)
-        if: ${{ github.event.schedule == '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION }}
+        if: ${{ github.event.schedule == '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION == 'true' }}
         uses: matlab-actions/run-command@v1
         with:
           command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
       - name: Run unit tests with existing MEX files (legacy)
-        if: ${{ github.event.schedule != '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION }}
+        if: ${{ github.event.schedule != '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION == 'true' }}
         uses: matlab-actions/run-command@v1
         with:
           command: addpath(pwd); results = spm_tests('class','unit','display',true); assert(all(~[results.Failed]));
       - name: Run regression tests with existing MEX files
-        if: ${{ github.event.schedule == '40 16 * * 3' && !env.USE_OLD_MATLAB_ACTION }}
+        if: ${{ github.event.schedule == '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION == 'false' }}
         uses: matlab-actions/run-command@v2
         with:
           command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
       - name: Run unit tests with existing MEX files
-        if: ${{ github.event.schedule != '40 16 * * 3' && !env.USE_OLD_MATLAB_ACTION }}
+        if: ${{ github.event.schedule != '40 16 * * 3' && env.USE_OLD_MATLAB_ACTION == 'false' }}
         uses: matlab-actions/run-command@v2
         with:
           command: addpath(pwd); results = spm_tests('class','unit','display',true); assert(all(~[results.Failed]));
