--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -13,37 +13,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["R2022a", "R2023b", "R2024a"]
-        os: ["ubuntu-latest", "macos-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
+        version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a"]
+        os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
         exclude:
           - os: windows-latest
-            version: "R2020a" # MATLAB not available
+            version: ["R2020a", "R2020b"] # MATLAB not available
           - os: windows-latest
-            version: "R2020b" # MATLAB not available
-          - os: windows-latest
-            version: "R2021a" # Compiler not available
-          - os: windows-latest
-            version: "R2021b" # Compiler not available
+            version: ["R2021a", "R2021b"] # Compiler not available
           - os: macos-latest
-            version: "R2020a" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2020b" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2021a" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2021b" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2022a" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2022b" # Apple Silicon version not available
-          - os: macos-latest
-            version: "R2023a" # Apple Silicon version not available
+            version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b", "R2023a"] # Apple Silicon version not available
     runs-on: ${{matrix.os}}
     steps:
       - name: Set USE_OLD_MATLAB_ACTION environment variable
-        id: set-env
         run: |
-          if [[ "${{ matrix.version }}" == "R2020a" ]] || [[ "${{ matrix.version }}" == "R2020b" ]] || [[ "${{ matrix.version }}" == "R2022a" ]] || [[ "${{ matrix.version }}" == "R2022b" ]]; then
+          if [[ "${{ matrix.version }}" == "R2020a" || "${{ matrix.version }}" == "R2020b" || "${{ matrix.version }}" == "R2022a" || "${{ matrix.version }}" == "R2022b" ]]; then
             echo "USE_OLD_MATLAB_ACTION=true" >> $GITHUB_ENV
           else
             echo "USE_OLD_MATLAB_ACTION=false" >> $GITHUB_ENV
