--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -17,11 +17,27 @@ jobs:
         os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
         exclude:
           - os: windows-latest
-            version: ["R2020a", "R2020b"] # MATLAB not available
+            version: "R2020a" # MATLAB not available
           - os: windows-latest
-            version: ["R2021a", "R2021b"] # Compiler not available
+            version: "R2020b" # MATLAB not available
+          - os: windows-latest
+            version: "R2021a" # Compiler not available
+          - os: windows-latest
+            version: "R2021b" # Compiler not available
           - os: macos-latest
-            version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b", "R2023a"] # Apple Silicon version not available
+            version: "R2020a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2020b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2021a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2021b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2022a" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2022b" # Apple Silicon version not available
+          - os: macos-latest
+            version: "R2023a" # Apple Silicon version not available
     runs-on: ${{matrix.os}}
     steps:
       - name: Set USE_OLD_MATLAB_ACTION environment variable
