--- a/.github/workflows/matlab_legacy.yml
+++ b/.github/workflows/matlab_legacy.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Tests (legacy MATLAB action)
 on:
   release:
     types: [published]
@@ -13,18 +13,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["R2023a", "R2023b", "R2024a"]
-        os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
+        version: ["R2020a", "R2020b", "R2021a", "R2021b", "R2022a", "R2022b"]
+        os: ["ubuntu-latest", "macos-13", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
         exclude:
-          - os: macos-latest
-            version: "R2023a" # Apple Silicon version not available
+          - os: windows-latest
+            version: "R2020a" # MATLAB not available
+          - os: windows-latest
+            version: "R2020b" # MATLAB not available
+          - os: windows-latest
+            version: "R2021a" # Compiler not available
+          - os: windows-latest
+            version: "R2021b" # Compiler not available
     runs-on: ${{matrix.os}}
     steps:
-      - name: Set up MATLAB
-        uses: matlab-actions/setup-matlab@v2
+      - name: Set up MATLAB (legacy)
+        uses: matlab-actions/setup-matlab@v1
         with:
           release: ${{matrix.version}}
-
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Setup cached test data folder
@@ -44,12 +49,12 @@ jobs:
 
       - name: Run regression tests with existing MEX files
         if: github.event.schedule == '40 16 * * 3'
-        uses: matlab-actions/run-command@v2
+        uses: matlab-actions/run-command@v1
         with:
           command: addpath(pwd); results = spm_tests('class','regression','display',true); assert(all(~[results.Failed]));
       - name: Run unit tests with existing MEX files
         if: github.event.schedule != '40 16 * * 3'
-        uses: matlab-actions/run-command@v2
+        uses: matlab-actions/run-command@v1
         with:
           command: addpath(pwd); results = spm_tests('class','unit','display',true); assert(all(~[results.Failed]));
 
