--- a/.github/workflows/test-unit-framework.yml
+++ b/.github/workflows/test-unit-framework.yml
@@ -13,6 +13,9 @@ on:
         - manual
         - both
 
+env:
+  MLM_LICENSE_TOKEN: ${{ secrets.MATLAB_BATCH_TOKEN }}
+
 jobs:
   test-unit-framework:
     runs-on: ubuntu-latest
@@ -24,79 +27,54 @@ jobs:
     - name: Setup MATLAB
       uses: matlab-actions/setup-matlab@v2
       with:
-        release: R2024b
+        release: latest
+        products: MATLAB_Compiler
         
-    - name: Create minimal test application
+    - name: Compile test application
       uses: matlab-actions/run-command@v2
       with:
         command: |
-          % Create a minimal standalone app that tests the Unit Testing Framework
-          fprintf('Creating minimal test application...\n');
+          fprintf('Compiling test application...\n');
           
-          % Create the main function
+          % Create a minimal standalone app that tests the Unit Testing Framework
           fid = fopen('test_unittest_standalone.m', 'w');
           fprintf(fid, 'function test_unittest_standalone(varargin)\n');
           fprintf(fid, '%% Test if MATLAB Unit Testing Framework works in standalone\n');
-          fprintf(fid, '\n');
           fprintf(fid, 'fprintf(''=== Unit Testing Framework Test ===\\n'');\n');
-          fprintf(fid, '\n');
-          fprintf(fid, '%% Test 1: Check if runtests exists\n');
           fprintf(fid, 'if exist(''runtests'', ''builtin'')\n');
           fprintf(fid, '    fprintf(''✓ runtests function is available\\n'');\n');
           fprintf(fid, 'else\n');
           fprintf(fid, '    fprintf(''✗ runtests function not available\\n'');\n');
           fprintf(fid, '    return;\n');
           fprintf(fid, 'end\n');
-          fprintf(fid, '\n');
-          fprintf(fid, '%% Test 2: Check if TestSuite exists\n');
           fprintf(fid, 'try\n');
           fprintf(fid, '    import matlab.unittest.TestSuite;\n');
           fprintf(fid, '    fprintf(''✓ TestSuite can be imported\\n'');\n');
           fprintf(fid, 'catch\n');
           fprintf(fid, '    fprintf(''✗ TestSuite cannot be imported\\n'');\n');
           fprintf(fid, 'end\n');
-          fprintf(fid, '\n');
-          fprintf(fid, '%% Test 3: Try to run a simple function-based test\n');
           fprintf(fid, 'try\n');
-          fprintf(fid, '    % Create a simple test file\n');
-          fprintf(fid, '    create_simple_test();\n');
-          fprintf(fid, '    \n');
-          fprintf(fid, '    % Try to run it\n');
+          fprintf(fid, '    fid2 = fopen(''simple_test.m'', ''w'');\n');
+          fprintf(fid, '    fprintf(fid2, ''function tests = simple_test\\n'');\n');
+          fprintf(fid, '    fprintf(fid2, ''tests = functiontests(localfunctions);\\n'');\n');
+          fprintf(fid, '    fprintf(fid2, ''end\\n'');\n');
+          fprintf(fid, '    fprintf(fid2, ''function test_basic(testCase)\\n'');\n');
+          fprintf(fid, '    fprintf(fid2, ''testCase.verifyEqual(1+1, 2);\\n'');\n');
+          fprintf(fid, '    fprintf(fid2, ''end\\n'');\n');
+          fprintf(fid, '    fclose(fid2);\n');
           fprintf(fid, '    results = runtests(''simple_test.m'');\n');
           fprintf(fid, '    if ~isempty(results)\n');
-          fprintf(fid, '        fprintf(''✓ Function-based test executed: %%d passed, %%d failed\\n'', ...\n');
-          fprintf(fid, '                sum([results.Passed]), sum([results.Failed]));\n');
+          fprintf(fid, '        fprintf(''✓ Function-based test executed: %%d passed, %%d failed\\n'', sum([results.Passed]), sum([results.Failed]));\n');
           fprintf(fid, '    else\n');
           fprintf(fid, '        fprintf(''✗ No results from function-based test\\n'');\n');
           fprintf(fid, '    end\n');
           fprintf(fid, 'catch ME\n');
           fprintf(fid, '    fprintf(''✗ Function-based test failed: %%s\\n'', ME.message);\n');
           fprintf(fid, 'end\n');
-          fprintf(fid, '\n');
           fprintf(fid, 'fprintf(''=== Test completed ===\\n'');\n');
-          fprintf(fid, '\n');
-          fprintf(fid, 'end\n');
-          fprintf(fid, '\n');
-          fprintf(fid, 'function create_simple_test()\n');
-          fprintf(fid, '%% Create a simple test file\n');
-          fprintf(fid, 'fid = fopen(''simple_test.m'', ''w'');\n');
-          fprintf(fid, 'fprintf(fid, ''function tests = simple_test\\n'');\n');
-          fprintf(fid, 'fprintf(fid, ''tests = functiontests(localfunctions);\\n'');\n');
-          fprintf(fid, 'fprintf(fid, ''end\\n'');\n');
-          fprintf(fid, 'fprintf(fid, ''function test_basic(testCase)\\n'');\n');
-          fprintf(fid, 'fprintf(fid, ''testCase.verifyEqual(1+1, 2);\\n'');\n');
-          fprintf(fid, 'fprintf(fid, ''end\\n'');\n');
-          fprintf(fid, 'fclose(fid);\n');
           fprintf(fid, 'end\n');
           fclose(fid);
           
-          fprintf('✓ Minimal test application created\n');
-          
-    - name: Compile test application
-      uses: matlab-actions/run-command@v2
-      with:
-        command: |
-          fprintf('Compiling test application...\n');
           try
               mcc('-m', '-v', 'test_unittest_standalone.m');
               fprintf('✓ Compilation successful\n');
@@ -105,32 +83,126 @@ jobs:
               error('Compilation failed');
           end
           
+    - name: Test Unit Testing Framework directly (no compilation)
+      uses: matlab-actions/run-command@v2
+      with:
+        command: |
+          fprintf('=== Testing Unit Testing Framework (No Compilation) ===\n');
+          
+          % Test 1: Check if runtests exists
+          if exist('runtests', 'builtin')
+              fprintf('✓ runtests function is available\n');
+          else
+              fprintf('✗ runtests function not available\n');
+              return;
+          end
+          
+          % Test 2: Check if TestSuite exists
+          try
+              import matlab.unittest.TestSuite;
+              fprintf('✓ TestSuite can be imported\n');
+          catch ME
+              fprintf('✗ TestSuite cannot be imported: %s\n', ME.message);
+          end
+          
+          % Test 3: Try to run a simple function-based test
+          try
+              % Create a simple test file
+              fid = fopen('simple_test.m', 'w');
+              fprintf(fid, 'function tests = simple_test\n');
+              fprintf(fid, 'tests = functiontests(localfunctions);\n');
+              fprintf(fid, 'end\n');
+              fprintf(fid, 'function test_basic(testCase)\n');
+              fprintf(fid, 'testCase.verifyEqual(1+1, 2);\n');
+              fprintf(fid, 'end\n');
+              fclose(fid);
+              
+              % Try to run it
+              fprintf('  Testing function-based test execution...\n');
+              results = runtests('simple_test.m');
+              if ~isempty(results)
+                  fprintf('✓ Function-based test executed: %d passed, %d failed\n', ...
+                          sum([results.Passed]), sum([results.Failed]));
+              else
+                  fprintf('✗ No results from function-based test\n');
+              end
+          catch ME
+              fprintf('✗ Function-based test failed: %s\n', ME.message);
+          end
+          
+          % Test 4: Test with SPM if available
+          if exist('spm.m', 'file')
+              fprintf('  Testing with SPM...\n');
+              try
+                  addpath(pwd);
+                  if exist('spm_run_standalone_tests.m', 'file')
+                      fprintf('    Found spm_run_standalone_tests.m\n');
+                      
+                      % Test our test runner directly (no compilation needed)
+                      results = spm_run_standalone_tests();
+                      if ~isempty(results) && isstruct(results)
+                          passed = sum([results.Passed]);
+                          failed = sum([results.Failed]);
+                          fprintf('✓ SPM test runner works: %d passed, %d failed\n', passed, failed);
+                      else
+                          fprintf('✗ SPM test runner failed to return results\n');
+                      end
+                  else
+                      fprintf('    spm_run_standalone_tests.m not found\n');
+                  end
+              catch ME
+                  fprintf('✗ SPM testing failed: %s\n', ME.message);
+              end
+          else
+              fprintf('  SPM not found - skipping SPM tests\n');
+          end
+          
+          fprintf('=== Framework Test Completed ===\n');
+
+          
     - name: Test compiled application
+      shell: bash
       run: |
         echo "=== Testing Compiled Application ==="
         
-        # List files
+        # List files to see what was generated
         echo "Generated files:"
         ls -la
         
-        # Find the executable
+        # Find and run the executable
         if [ -f "test_unittest_standalone" ]; then
             echo "✓ Executable found"
             chmod +x test_unittest_standalone
             echo "Running standalone test..."
             ./test_unittest_standalone
         elif [ -f "run_test_unittest_standalone.sh" ]; then
-            echo "✓ Script found"
+            echo "✓ Script wrapper found"
+            chmod +x run_test_unittest_standalone.sh
             # Find MATLAB Runtime
             MCR_ROOT=$(find /opt -name "MATLAB_Runtime" -type d 2>/dev/null | head -1)
             if [ -z "$MCR_ROOT" ]; then
-                MCR_ROOT="/opt/matlabruntime/v*"
+                # Try common locations
+                for path in /opt/matlabruntime/v* /usr/local/MATLAB/MATLAB_Runtime/v*; do
+                    if [ -d "$path" ]; then
+                        MCR_ROOT="$path"
+                        break
+                    fi
+                done
             fi
-            echo "Using MCR at: $MCR_ROOT"
-            echo "Running standalone test..."
-            ./run_test_unittest_standalone.sh $MCR_ROOT
+            
+            if [ -n "$MCR_ROOT" ]; then
+                echo "Using MCR at: $MCR_ROOT"
+                ./run_test_unittest_standalone.sh "$MCR_ROOT"
+            else
+                echo "✗ MATLAB Runtime not found"
+                # Try to run without MCR path (might work)
+                echo "Attempting to run without explicit MCR path..."
+                ./run_test_unittest_standalone.sh
+            fi
         else
-            echo "✗ No executable found"
+            echo "✗ No executable or script found"
+            echo "Available files:"
+            ls -la
             exit 1
         fi
         
