--- a/.github/workflows/test-unit-framework.yml
+++ b/.github/workflows/test-unit-framework.yml
@@ -12,6 +12,14 @@ on:
         - runtests
         - manual
         - both
+  push:
+    branches: [ spm_standalone_testing, main ]
+    paths:
+      - '.github/workflows/test-unit-framework.yml'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - '.github/workflows/test-unit-framework.yml'
 
 env:
   MLM_LICENSE_TOKEN: ${{ secrets.MATLAB_BATCH_TOKEN }}
