--- a/.github/workflows/test-unit-framework.yml
+++ b/.github/workflows/test-unit-framework.yml
@@ -63,15 +63,15 @@ jobs:
           fprintf(fid, '    fprintf(''✗ TestSuite cannot be imported\\n'');\n');
           fprintf(fid, 'end\n');
           fprintf(fid, 'try\n');
-          fprintf(fid, '    fid2 = fopen(''simple_test.m'', ''w'');\n');
-          fprintf(fid, '    fprintf(fid2, ''function tests = simple_test\\n'');\n');
+          fprintf(fid, '    fid2 = fopen(''simple_function_test.m'', ''w'');\n');
+          fprintf(fid, '    fprintf(fid2, ''function tests = simple_function_test\\n'');\n');
           fprintf(fid, '    fprintf(fid2, ''tests = functiontests(localfunctions);\\n'');\n');
           fprintf(fid, '    fprintf(fid2, ''end\\n'');\n');
           fprintf(fid, '    fprintf(fid2, ''function test_basic(testCase)\\n'');\n');
           fprintf(fid, '    fprintf(fid2, ''testCase.verifyEqual(1+1, 2);\\n'');\n');
           fprintf(fid, '    fprintf(fid2, ''end\\n'');\n');
           fprintf(fid, '    fclose(fid2);\n');
-          fprintf(fid, '    results = runtests(''simple_test.m'');\n');
+          fprintf(fid, '    results = runtests(''simple_function_test.m'');\n');
           fprintf(fid, '    if ~isempty(results)\n');
           fprintf(fid, '        fprintf(''✓ Function-based test executed: %%d passed, %%d failed\\n'', sum([results.Passed]), sum([results.Failed]));\n');
           fprintf(fid, '    else\n');
@@ -79,6 +79,26 @@ jobs:
           fprintf(fid, '    end\n');
           fprintf(fid, 'catch ME\n');
           fprintf(fid, '    fprintf(''✗ Function-based test failed: %%s\\n'', ME.message);\n');
+          fprintf(fid, 'end\n');
+          fprintf(fid, '% Test class-based tests\n');
+          fprintf(fid, 'try\n');
+          fprintf(fid, '    fid3 = fopen(''simple_class_test.m'', ''w'');\n');
+          fprintf(fid, '    fprintf(fid3, ''classdef simple_class_test < matlab.unittest.TestCase\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''    methods (Test)\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''        function test_basic(testCase)\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''            testCase.verifyEqual(2+2, 4);\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''        end\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''    end\\n'');\n');
+          fprintf(fid, '    fprintf(fid3, ''end\\n'');\n');
+          fprintf(fid, '    fclose(fid3);\n');
+          fprintf(fid, '    results = runtests(''simple_class_test.m'');\n');
+          fprintf(fid, '    if ~isempty(results)\n');
+          fprintf(fid, '        fprintf(''✓ Class-based test executed: %%d passed, %%d failed\\n'', sum([results.Passed]), sum([results.Failed]));\n');
+          fprintf(fid, '    else\n');
+          fprintf(fid, '        fprintf(''✗ No results from class-based test\\n'');\n');
+          fprintf(fid, '    end\n');
+          fprintf(fid, 'catch ME\n');
+          fprintf(fid, '    fprintf(''✗ Class-based test failed: %%s\\n'', ME.message);\n');
           fprintf(fid, 'end\n');
           fprintf(fid, 'fprintf(''=== Test completed ===\\n'');\n');
           fprintf(fid, 'end\n');
